0.2.3  Thu Dec 24 23:24:10 2015
    - Add `fasops covers`

0.2.2  2015-12-24 22:09:28 CST
    - Fix `fasops split`
    - Add `fasops separate`

0.2.1  2015-10-28 19:19:10 CST
    - Add license

0.2.0  2015-07-31 02:49:59 CST
    - Convert to Dist::Milla

0.1.0  2015-04-13 00:00:00 CST
    - Now useful