@@ -1,5 +1,6 @@
 0.2.3  Thu Dec 24 23:24:10 2015
     - Add `fasops covers`
+    - split and names accept more than one files
 
 0.2.2  2015-12-24 22:09:28 CST
     - Fix `fasops split`
